[gd_scene load_steps=44 format=3 uid="uid://b3urcqmix8s8g"]

[ext_resource type="Script" uid="uid://cp47q7vvgwlhh" path="res://scripts/wrath.gd" id="1_fvlx1"]
[ext_resource type="PackedScene" uid="uid://srdha174fo73" path="res://scenes/particles/boss_death.tscn" id="2_brvm4"]
[ext_resource type="AudioStream" uid="uid://bebl8tujosm1y" path="res://audio/sfx/enemy/Hit_1.wav" id="3_nbwf2"]
[ext_resource type="FontFile" uid="uid://cg3g6bx1v1c8l" path="res://textures/fonts/Seagram tfb.ttf" id="3_ww6eg"]
[ext_resource type="AudioStream" uid="uid://b4dyx5m8hsynq" path="res://audio/sfx/enemy/Hit_2.wav" id="4_1aywb"]
[ext_resource type="AudioStream" uid="uid://bv7cgqlt3sbtb" path="res://audio/sfx/enemy/Hit_3.wav" id="5_26ndu"]
[ext_resource type="Texture2D" uid="uid://chgom45rhh51o" path="res://textures/wrath/color.png" id="5_hyseg"]
[ext_resource type="Texture2D" uid="uid://d2eydc4mvaeui" path="res://textures/wrath/emision.png" id="6_00mkd"]
[ext_resource type="AudioStream" uid="uid://c8q1fk5xrer8m" path="res://audio/sfx/enemy/Slam.wav" id="6_ay1ei"]
[ext_resource type="AudioStream" uid="uid://cf425758jfm2q" path="res://audio/sfx/enemy/Despawn.wav" id="6_ew0re"]
[ext_resource type="Texture2D" uid="uid://bt0lar22n8dc1" path="res://textures/wrath/normal.png" id="7_4bxt0"]
[ext_resource type="AudioStream" uid="uid://dejgyyvoucgey" path="res://audio/sfx/enemy/Cry_3.wav" id="8_6fdi0"]
[ext_resource type="PackedScene" uid="uid://b0t7a64rsk4nk" path="res://models/blender/wrath.blend" id="10_h46di"]
[ext_resource type="AudioStream" uid="uid://cl02p4qrmi4hf" path="res://audio/sfx/brick/Crumble_1.wav" id="10_s7vgg"]
[ext_resource type="Shader" uid="uid://kww2iajo2air" path="res://shaders/disolve.gdshader" id="11_57ti3"]
[ext_resource type="AudioStream" uid="uid://pwfss3lgluso" path="res://audio/sfx/brick/Crumble_2.wav" id="11_i4c6m"]
[ext_resource type="AudioStream" uid="uid://2r6c4ytgkm4u" path="res://audio/sfx/enemy/Cry.wav" id="12_kqq76"]
[ext_resource type="AudioStream" uid="uid://do7uftfsmyrp0" path="res://audio/sfx/brick/Crumble_3.wav" id="12_p5r8v"]
[ext_resource type="AudioStream" uid="uid://cnqmjqai7521j" path="res://audio/sfx/enemy/Spin.wav" id="13_367wx"]
[ext_resource type="AudioStream" uid="uid://bg0rsvkfwvyq1" path="res://audio/sfx/brick/Crumble_4.wav" id="13_wxkwy"]
[ext_resource type="Theme" uid="uid://bty2q8m8jwn5t" path="res://shaders/ui/theme.tres" id="15_uwbrs"]
[ext_resource type="StyleBox" uid="uid://bosm3016yuwg3" path="res://shaders/ui/wrath_fill.tres" id="16_x2rmd"]
[ext_resource type="AudioStream" uid="uid://dia2v1hr7kneb" path="res://audio/sfx/enemy/Cry_2.wav" id="19_ewgrb"]
[ext_resource type="PackedScene" uid="uid://d0ifk8wbwkr3w" path="res://scenes/particles/wrath_hurt.tscn" id="22_1df88"]

[sub_resource type="Curve" id="Curve_4iunx"]
_limits = [0.0, 5.0, 0.0, 1.0]
_data = [Vector2(0, 8.9011), 0.0, 0.0, 0, 0, Vector2(1e-05, 3.35165), -18.9164, -18.9164, 0, 0, Vector2(0.210526, 2.30769), -6.63492, -6.63492, 0, 0, Vector2(0.267943, 0), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="Curve" id="Curve_hhdhn"]
_data = [Vector2(0, 0.21978), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_q1yl6"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1e-05, 0.263736), 0.0, 0.0, 0, 0, Vector2(1, 0.076923), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="FastNoiseLite" id="FastNoiseLite_1er76"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ohqg2"]
noise = SubResource("FastNoiseLite_1er76")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y1py8"]
render_priority = 0
shader = ExtResource("11_57ti3")
shader_parameter/base_texture = ExtResource("5_hyseg")
shader_parameter/emission_texture = ExtResource("6_00mkd")
shader_parameter/emission_texture_intensity = 0.15
shader_parameter/inside_color = Color(0, 0, 0, 1)
shader_parameter/dissolve_amount = 0.0
shader_parameter/noise_texture = SubResource("NoiseTexture2D_ohqg2")
shader_parameter/glow_color = Color(0.690196, 0.231373, 0.215686, 1)
shader_parameter/glow_intensitiy = 17.645
shader_parameter/glow_border_width = 0.018
shader_parameter/glow_border_smoothness = 0.003
shader_parameter/normal_texture = ExtResource("7_4bxt0")
shader_parameter/normal_strength = 1.0

[sub_resource type="Animation" id="Animation_edx7f"]
resource_name = "CHASE"
length = 0.833338
loop_mode = 1
step = 0.0416667
tracks/0/type = "animation"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh/wrath/AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": PackedStringArray("Chase"),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_x1kl7"]
resource_name = "DEATH"
length = 10.0
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SFX")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_ew0re")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "animation"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mesh/wrath/AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": PackedStringArray("Death"),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Health:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape3D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 4.06667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1.26667, 9.23333, 9.93333),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [3.0, 1.0],
"method": &"dissolve_body"
}, {
"args": [],
"method": &"unlock_progression"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Light:light_energy")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.4, 2.63333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [80.0, 0.0]
}

[sub_resource type="Animation" id="Animation_mlrdc"]
resource_name = "INTRO"
length = 2.91667
step = 0.0416667
tracks/0/type = "animation"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh/wrath/AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": PackedStringArray("Intro"),
"times": PackedFloat32Array(0)
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SFX")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 2.94031,
"start_offset": 0.0,
"stream": ExtResource("8_6fdi0")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Health:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [3.0, 0.0],
"method": &"dissolve_body"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Light:light_energy")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.0416667, 2.54167),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 80.0]
}

[sub_resource type="Animation" id="Animation_nx0fp"]
resource_name = "JUMP_ATTACK"
length = 1.91667
step = 0.0416667
tracks/0/type = "animation"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh/wrath/AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": PackedStringArray("Jump_Attack"),
"times": PackedFloat32Array(0)
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.45833),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shake_camera"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.45833),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_slam_sound"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.45833),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_brick_sound"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Mesh/Jump/CollisionShape3D:disabled")
tracks/4/interp = 0
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.5, 1.54166),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:TRACKING_MULTIPLIER")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.0416667, 1, 1.83333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 0, 0, 1]
}
tracks/6/type = "audio"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SFX")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"clips": [{
"end_offset": 4.42048,
"start_offset": 0.0,
"stream": ExtResource("19_ewgrb")
}],
"times": PackedFloat32Array(0)
}
tracks/6/use_blend = true

[sub_resource type="Animation" id="Animation_jojdm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Health:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Mesh/wrath/Armature/Skeleton3D/LeftHand/Area3D/CollisionShape3D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Mesh/wrath/Armature/Skeleton3D/RightHand/Area3D/CollisionShape3D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Mesh/wrath/Armature/Skeleton3D/Torso/Area3D/CollisionShape3D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:TRACKING_MULTIPLIER")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Mesh/Jump/CollisionShape3D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Light:light_energy")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_plb4y"]
resource_name = "SLAM_ATTACK"
length = 2.20834
step = 0.0416667
tracks/0/type = "animation"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh/wrath/AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": PackedStringArray("Slam_Attack"),
"times": PackedFloat32Array(0)
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.66667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shake_camera"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.66667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_slam_sound"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.66667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_brick_sound"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Mesh/wrath/Armature/Skeleton3D/RightHand/Area3D/CollisionShape3D:disabled")
tracks/4/interp = 0
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.625, 1.75),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Mesh/wrath/Armature/Skeleton3D/LeftHand/Area3D/CollisionShape3D:disabled")
tracks/5/interp = 0
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1.625, 1.75),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Mesh/wrath/Armature/Skeleton3D/Torso/Area3D/CollisionShape3D:disabled")
tracks/6/interp = 0
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.625, 1.75),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:TRACKING_MULTIPLIER")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.666667, 1.7614, 1.95834),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1.0, 0.2, 0.2, 1.0]
}
tracks/8/type = "audio"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("SFX")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"clips": [{
"end_offset": 4.22526,
"start_offset": 0.0,
"stream": ExtResource("12_kqq76")
}],
"times": PackedFloat32Array(0.125)
}
tracks/8/use_blend = true

[sub_resource type="Animation" id="Animation_jiut6"]
resource_name = "SPIN_ATTACK"
length = 3.0
step = 0.0416667
tracks/0/type = "animation"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh/wrath/AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": PackedStringArray("Spin"),
"times": PackedFloat32Array(0)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:TRACKING_MULTIPLIER")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.791667, 0.958333, 2.29167, 2.54167),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1.0, 0.0, 0.0, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Mesh/wrath/Armature/Skeleton3D/Torso/Area3D/CollisionShape3D:disabled")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.833333, 1.16667, 2.04167),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SFX")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("12_kqq76")
}, {
"end_offset": 1.28601,
"start_offset": 0.0,
"stream": ExtResource("13_367wx")
}],
"times": PackedFloat32Array(0, 0.5)
}
tracks/3/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y10ku"]
_data = {
&"CHASE": SubResource("Animation_edx7f"),
&"DEATH": SubResource("Animation_x1kl7"),
&"INTRO": SubResource("Animation_mlrdc"),
&"JUMP_ATTACK": SubResource("Animation_nx0fp"),
&"RESET": SubResource("Animation_jojdm"),
&"SLAM_ATTACK": SubResource("Animation_plb4y"),
&"SPIN_ATTACK": SubResource("Animation_jiut6")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_d1l46"]
radius = 0.822642
height = 1.9658

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_86b8h"]
radius = 1.03887
height = 2.69477

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fiqjv"]
radius = 1.62464
height = 5.3456

[sub_resource type="CylinderShape3D" id="CylinderShape3D_4usqi"]
height = 0.892645
radius = 9.61276

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_oijfr"]
radius = 0.830904
height = 4.80709

[node name="Wrath" type="CharacterBody3D" node_paths=PackedStringArray("ANIM", "MESH_ANIM", "MESH", "NAV_AGENT", "HEALTH_BAR", "RIGHT_HAND_ATTACK_AREA", "LEFT_HAND_ATTACK_AREA", "JUMP_ATTACK_AREA", "TORSO_ATTACK_AREA")]
collision_layer = 7
collision_mask = 7
script = ExtResource("1_fvlx1")
ATTACK_ANIMATION = Array[String](["SLAM_ATTACK", "JUMP_ATTACK", "SPIN_ATTACK"])
ATTACK_RADIUS = Array[float]([5.0, 10.0, 10.0])
ATTACK_LIKELEHOOD = Array[Curve]([SubResource("Curve_4iunx"), SubResource("Curve_hhdhn"), SubResource("Curve_q1yl6")])
ANIM = NodePath("AnimationPlayer")
MESH_ANIM = NodePath("Mesh/wrath/AnimationPlayer")
MESH = NodePath("Mesh")
NAV_AGENT = NodePath("NavigationAgent3D")
HEALTH_BAR = NodePath("Health")
RIGHT_HAND_ATTACK_AREA = NodePath("Mesh/wrath/Armature/Skeleton3D/RightHand/Area3D")
LEFT_HAND_ATTACK_AREA = NodePath("Mesh/wrath/Armature/Skeleton3D/LeftHand/Area3D")
JUMP_ATTACK_AREA = NodePath("Mesh/Jump")
TORSO_ATTACK_AREA = NodePath("Mesh/wrath/Armature/Skeleton3D/Torso/Area3D")
HURT_PARTICLE_SCENE = ExtResource("22_1df88")
DEATH_PARTICLE_SCENE = ExtResource("2_brvm4")
BODY_MATERIAL = SubResource("ShaderMaterial_y1py8")
HIT_SOUNDS = Array[AudioStream]([ExtResource("3_nbwf2"), ExtResource("4_1aywb"), ExtResource("5_26ndu")])
SLAM_SOUNDS = Array[AudioStream]([ExtResource("6_ay1ei")])
BRICK_SOUNDS = Array[AudioStream]([ExtResource("10_s7vgg"), ExtResource("11_i4c6m"), ExtResource("12_p5r8v"), ExtResource("13_wxkwy")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
callback_mode_process = 0
libraries = {
&"": SubResource("AnimationLibrary_y10ku")
}
autoplay = "RESET"
playback_auto_capture_ease_type = 2
next/INTRO = &"CHASE"
next/JUMP_ATTACK = &"CHASE"
next/SLAM_ATTACK = &"CHASE"
next/SPIN_ATTACK = &"CHASE"
blend_times = [&"INTRO", &"CHASE", 0.5]

[node name="Mesh" type="Node3D" parent="."]

[node name="wrath" parent="Mesh" instance=ExtResource("10_h46di")]

[node name="Skeleton3D" parent="Mesh/wrath/Armature" index="0"]
bones/1/position = Vector3(0.00376162, -0.723021, 0.986871)
bones/1/rotation = Quaternion(0.25735, 8.11288e-17, 7.05286e-17, 0.966318)
bones/2/rotation = Quaternion(0.347629, 1.11774e-07, 4.14406e-08, 0.937632)
bones/3/rotation = Quaternion(0.101092, 0.18125, 0.763867, 0.611094)
bones/3/scale = Vector3(1, 1, 1)
bones/4/rotation = Quaternion(0.133097, 0.385149, 0.190128, 0.893195)
bones/5/rotation = Quaternion(-0.455173, -0.0679145, 0.0325446, 0.887213)
bones/6/rotation = Quaternion(-0.0822429, 0.000622982, 0.134669, 0.987472)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(-0.136309, -2.93099e-14, -3.24986e-08, 0.990666)
bones/8/rotation = Quaternion(0.101092, -0.18125, -0.763867, 0.611094)
bones/8/scale = Vector3(1, 1, 1)
bones/9/rotation = Quaternion(0.18255, -0.0376967, -0.180838, 0.965687)
bones/9/scale = Vector3(1, 1, 1)
bones/10/rotation = Quaternion(-0.239191, 0.243902, -0.292818, 0.893061)
bones/10/scale = Vector3(1, 1, 1)
bones/11/rotation = Quaternion(-0.0822429, -0.000622975, -0.134669, 0.987472)

[node name="wrath" parent="Mesh/wrath/Armature/Skeleton3D" index="0"]
material_override = SubResource("ShaderMaterial_y1py8")

[node name="LeftHand" type="BoneAttachment3D" parent="Mesh/wrath/Armature/Skeleton3D" index="1"]
transform = Transform3D(-0.923684, -0.195082, -0.329773, 0.0905008, -0.947409, 0.306963, -0.372313, 0.253692, 0.892762, -2.20961, 2.295, 1.0941)
bone_name = "hand_l"
bone_idx = 6

[node name="Area3D" type="Area3D" parent="Mesh/wrath/Armature/Skeleton3D/LeftHand"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Mesh/wrath/Armature/Skeleton3D/LeftHand/Area3D"]
transform = Transform3D(0.232359, -0.667949, -0.707003, 0.97263, 0.159571, 0.168901, 0, -0.726898, 0.686745, 0, 0, 0)
shape = SubResource("CapsuleShape3D_d1l46")
disabled = true

[node name="RightHand" type="BoneAttachment3D" parent="Mesh/wrath/Armature/Skeleton3D" index="2"]
transform = Transform3D(-0.699442, 0.46057, -0.546495, -0.405411, -0.885417, -0.22733, -0.588577, 0.0625508, 0.806018, 2.21655, 2.22501, 1.16968)
bone_name = "hand_r"
bone_idx = 11

[node name="Area3D" type="Area3D" parent="Mesh/wrath/Armature/Skeleton3D/RightHand"]
transform = Transform3D(0.260016, 0.708287, 0.656294, -0.965604, 0.190726, 0.176725, -1.49012e-08, -0.679672, 0.733516, 0, 0, 0)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Mesh/wrath/Armature/Skeleton3D/RightHand/Area3D"]
shape = SubResource("CapsuleShape3D_86b8h")
disabled = true

[node name="Torso" type="BoneAttachment3D" parent="Mesh/wrath/Armature/Skeleton3D" index="3"]
transform = Transform3D(1, -2.98303e-13, 2.38418e-07, -7.9544e-08, 0.942703, 0.333634, -2.24757e-07, -0.333634, 0.942703, 0.00376162, 0.772264, 0.178648)
bone_name = "torso"
bone_idx = 2

[node name="Area3D" type="Area3D" parent="Mesh/wrath/Armature/Skeleton3D/Torso"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Mesh/wrath/Armature/Skeleton3D/Torso/Area3D"]
transform = Transform3D(1, 1.16415e-10, -9.31323e-10, 1.16415e-10, 1, 0, 0, 7.45058e-09, 1, -1.99663e-05, 1.64233, -0.317233)
shape = SubResource("CapsuleShape3D_fiqjv")
disabled = true

[node name="AnimationPlayer" parent="Mesh/wrath" index="1"]
root_motion_track = NodePath("Armature/Skeleton3D:root")
root_motion_local = false
callback_mode_process = 0
playback_default_blend_time = 0.2

[node name="Jump" type="Area3D" parent="Mesh"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Mesh/Jump"]
shape = SubResource("CylinderShape3D_4usqi")
disabled = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.49679, 0)
shape = SubResource("CapsuleShape3D_oijfr")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="Health" type="ProgressBar" parent="."]
visible = false
texture_filter = 1
offset_left = 607.0
offset_top = 42.0
offset_right = 1355.0
offset_bottom = 51.0
theme = ExtResource("15_uwbrs")
theme_override_styles/fill = ExtResource("16_x2rmd")
value = 50.0
rounded = true
show_percentage = false

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 927.0
offset_top = 14.0
offset_right = 1066.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(0.83, 0.83, 0.83, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ww6eg")
text = "Wrath - Гнев"
horizontal_alignment = 1
uppercase = true

[node name="SFX" type="AudioStreamPlayer2D" parent="."]
attenuation = 0.0145786
bus = &"SFX"

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]

[node name="Light" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.271614, 13.6732, -0.361175)
light_color = Color(0.69, 0.38985, 0.3795, 1)
light_energy = 0.0
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_specular = 0.0
omni_range = 27.0089

[connection signal="body_entered" from="Mesh/wrath/Armature/Skeleton3D/LeftHand/Area3D" to="." method="_on_attack_area_body_entered"]
[connection signal="body_entered" from="Mesh/wrath/Armature/Skeleton3D/RightHand/Area3D" to="." method="_on_attack_area_body_entered"]
[connection signal="body_entered" from="Mesh/wrath/Armature/Skeleton3D/Torso/Area3D" to="." method="_on_attack_area_body_entered"]
[connection signal="body_entered" from="Mesh/Jump" to="." method="_on_jump_attack_area_body_entered"]

[editable path="Mesh/wrath"]
